# kdev_llm

./: .gitignore  CMakeLists.txt  README.md  check_plugin.py  resolve_cmake.py  temp.md
.devdocs/: BRIEFING.md  DECISIONS_LOG.md  PROGRESS.md  SESSION_HANDOFF.md  SUMMARIES.md
.jules/: bolt.md  palette.md  sentinel.md
src/: CMakeLists.txt  JenovaPlugin.cpp  JenovaPlugin.h  KDevLLMPlugin.cpp  KDevLLMPlugin.h  jenovakdev.json  kdevllm.json
src/completion/: AiCompletionModel.cpp  AiCompletionModel.h
src/config/: AiConfigPage.cpp  AiConfigPage.h
src/context/: ContextManager.cpp  ContextManager.h
src/network/: LlamaClient.cpp  LlamaClient.h
src/storage/: ChatDatabase.cpp  ChatDatabase.h
src/tests/: CMakeLists.txt  TestCommandTextEdit.cpp
src/ui/: AiChatInputWidget.cpp  AiChatWidget.cpp  AiChatWidget.h  ChatMessageDelegate.cpp  ChatMessageDelegate.h  ChatMessageModel.cpp  ChatMessageModel.h
tests/: CMakeLists.txt  MockLlamaClient.h  TestAiChatWidget.cpp  TestAiChatWidget.h  TestAiCompletionModel.cpp  TestCommandTextEdit.cpp  TestContextManager.cpp  TestLlamaClient.cpp
tests/mocks/: KLocalizedString
tests/mocks/KTextEditor/: Cursor  Document  Range  View
tests/mocks/interfaces/: idocument.h  idocumentcontroller.h
tests/mocks/language/duchain/: duchainutils.h
